css/style.css
@font-face {
  font-family: 'Shadows Into Light Two';
  src: url('./fonts/Shadows_Into_Light_Two/ShadowsIntoLightTwo-Regular.ttf') format('truetype');
  font-weight: 400;
  font-style: normal;
  font-display: swap;
}

body {
    color: black;
    font-family: system-ui;
    font-size: 18px;
}

h2 {
	font-size: 24px;
}

html,body {
	margin: 0;
	padding: 0;
}

a {
  color: black;
  text-decoration: none;
}

p {
	line-height: 1.5em;
}	

#mobile-indicator {
    display: none;
}


#nextpage, #prevpage {
	display: none;
}




/*/////////////// Slider /////////////////*/

#slides {
    position: relative;
    padding: 0px;
    margin: 0px;
    list-style-type: none;

}

.slide {
    position: absolute;
    left: 0px;
    top: 0px;
    width: 100%;
    opacity: 0;
    z-index: 1;
	display: flex;
	justify-content: center;
    -webkit-transition: opacity 1s;
    -moz-transition: opacity 1s;
    -o-transition: opacity 1s;
    transition: opacity 1s;
}

.showing {
    opacity: 1;
    z-index: 2;
}


.slide-text {
  text-align: center;
  font-size: 56px;
}
.long-slide-text {
  margin-top: -17px;
  line-height: 1.2;
}

	#slides {
		top:-50px;
	}


.pulsate {
  animation: myPulse 2s ease-in-out infinite;
}

@keyframes myPulse {
  0%, 80% {
    transform: scale(1);  
  }

  90% {
    transform: scale(1.01); 
  }

  100% {
    transform: scale(1); 
  }
}

@media(max-width: 630px) {
		

	#slides {
		height: 600px;
    top: 160px;
	}
		.slide-text {
		font-size: 42px;
	}
}

@media(max-width: 450px) {
  #slides {
    height: 550px;
  }
}
/*///////// End Slider ///////////////////*/

#hero {
  display: flex;
  justify-content: center;
  align-items: center;
}
.heroVideo {
    position: fixed;
    object-fit: cover;
    width: 100%;
    min-height: 100%;
    z-index: -1;
}
.bgVideo {
  position: fixed;
  right: 0;
  bottom: 0;
  min-width: 100%;
  min-height: 100%;
  z-index: -1;
}
.panel-med-dark-bg {
  background-color: rgba(0, 0, 0, 0.88);
  padding: 40px;
  border-radius: 20px;
  color: rgb(241 237 207 / 90%);;
  font-size: 20px;
  line-height: 1.8;
}
.panel-dark-bg {
    background-color: rgb(1 15 50 / 96%);
    padding: 40px;
    border-radius: 20px;
    color: rgb(255 211 146);
    font-size: 22px;
    line-height: 1.8;
}
.flex-center {
  display: flex;
  justify-content: center;
  align-items: center;
}
.boxed {
  margin: auto;
  max-width: 900px;
}
.fit-content {
  width: fit-content;
  margin: auto;
}
.shadow-filter {
  background-color: rgba(77, 77, 77, 0.20);
  height: 100%;
  width: 100%;
}
/*//////////// Headeer///////////*/

header {
  height: 110px;
  position: absolute;
  top: 0;
  right: 0;
  left: 0;
  display: flex;
  justify-content: space-between;
}

.header-1 {
  font-size: 34px;
  font-family: Century Gothic;
  margin-left: 40px;
  text-shadow: 2px 2px 2px #afafaf;
}

.logo-1 {
  margin-top: 10px;
  padding-top: 0;
  padding-bottom: 0;
  margin-bottom: 0;
  letter-spacing: 1px;
}

.logo-2 {
  font-size: 32px;	
  padding-top: 0;
  margin-top: 0;
  letter-spacing: 1.9px;
}

#menu {
 bottom: 16px;
 right: 0;
 margin-right: 0;
 text-align: center;
 padding-top: 22px;
 font-size: 18px;
}


.menu-btn:hover {
  filter:brightness(150%);
}

.menu-btn {
	margin-right: 40px;
  margin-left: 20px;
	color: black;
  cursor: pointer;
}

.header-1, #menu, .menu-btn {
  display: inline-block;
}

@media(max-width: 820px) {

.menu-btn {
	margin-right: 10px;
	margin-left: 30px;
}
}

@media(max-width: 630px) {
  #menu {
    display: none;
    padding-top: 5px;
  }
  .menu-btn {
    margin: 15px;
  }
  .header-1 {
    width: 100%;
    margin-left: 10px;
    text-align: center;
  }
}

@media(max-width: 450px) {
	#menu {
		bottom: -30px;
	}
	.menu-btn {
		margin-right: 20px;
		margin-left: 20px;
	}
}

/*////////// End Header ///////////////*/


/*// Frames ///*/

.pt-page-1 {
	background-size: cover;
	background-position: center;
	display: flex;
	justify-content: center;
	align-items: center;
	}

.pt-page-2 {
    background: #D08569;
	color: white;
}


/*////// Rows & Columns /////*/

#row-1, #row-2, #row-3 {
        height: 100%;
}

.col-1, .col-2 {
	vertical-align: top;
	width: 49%;
	display: inline-block;
	
	
}

#row-1 {
    display: flex;
    align-items: center;

}

#row-1 img{
	display: block;
	margin: auto;
	height: 60px;
	margin-top: 40px;
        margin-bottom: 70px;
}

#row-1 .col-2 h2, #row-1 .col-2 p {
	margin: 20px 15%;
}

#row-2 .col-1 {
	color: white;
}	
	
#row-2 img {
	max-width: 100%
}

#row-2 {
	background: url("../media/collage4.jpg");
	background-size: cover;
  background-position-x: center;
}

#row-2 h2 {
	text-align: center;
        margin-bottom: 10px;
}

#row-2 p {
}

#row-2 .col-2 {
        vertical-align: middle;
        padding: 80px 0;
}


#row-3 {
	background: url("../media/chalkboard2.jpg");
	background-size: cover;
  z-index: 0;
  font-family: 'Shadows Into Light Two', cursive;
  font-size: 42px;
  letter-spacing: 5px;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}
#row-3, #row-3 a {
  color: #bedc3a;
}

.chalkboard {
  /*background-color: rgba(0, 0, 0, 0.3);*/
  height: 100%;
  width: 100%;
}
#row-3 .col-1 p, #row-3 .col-2 p, #row-3 .col-2 ul  {
	background-color: black;
	text-shadow: none;
	opacity: .54;
	color: white;
}

#row-3 .col-1 p, #row-3 .col-2 p, #row-3 .col-2 ul {
	padding: 20px 15px;
	width: 42%;
	margin: 15px auto;
}



#row-3 h2{
	margin: 0 0 80px;
  font-size: 60px;
  text-align: center;
}

#row-3 ul {
	max-height: 275px;
	
}

#row-3 li {
	
	list-style: none;
	margin: 10px 0;
}
	
/*/////// End Rows /////*/





/*/////////////// Media Queries ///////////////*/


@media(max-width: 1400px) {
  .panel-med-dark-bg {
    font-size: 18px;
    padding: 30px;
  }
  .panel-dark-bg {
    font-size: 20px;
    padding: 30px;
  }
  #slides {
    top: -50px;
  }
  #row-3 {
    font-size: 38px;
  }
  #row-3 h2{
    font-size: 50px;
  }
  .slide-text {
    font-size: 54px;
  }

}

@media(max-width: 930px) {

  body {
	 font-size: 16px;
  }
}



@media(max-width: 820px) {
   h2 {
	   font-size: 22px;
   }
   #row-1 .col-2 h2, #row-1 .col-2 p {
	margin: 20px 10%;
	}
}

@media(max-width: 630px) {
  .pt-page-1 {
    z-index: 1;
    position: relative;
    height: 932px;
  }
  .heroVideo {
    height: 972px;
    top: -40px
   }
  .bgVideo {
    z-index: 0;
   }
   .panel-dark-bg, .panel-med-dark-bg, #row-2, #row-3 {
     z-index: 1;
     position: relative;
     border-radius: 0;
   }
   #row-1, #row-2 {
	display: block;
   }
   #row-1 {
     display: none;
   }
   .shadow-filter {
    background-color: unset; 
   }
   #row-3, footer {
	 height: auto;
	 padding-bottom: 40px;
	 margin-bottom: -40px;
   }
	#row-1 h2 {
		text-align: center;
	}
   #row-2 {
	   background: url("../media/collage-mobile.jpg");
	   background-size: cover;
     background-position-x: center;
     height: fit-content;
   }
  #row-2 .col-2 {
	  padding-bottom: 0;
    padding-top: 40px;
  }

  #row-3 {
    font-size: 22px;
    padding: 15px;
  }
  #row-3 h2{
  	width: 80%;
  	position: static;
    font-size: 32px;
    margin: 40px auto 40px;
  }
  .panel-dark-bg {
  }
}

